create CollectionUtils.java to convert iterator to list